--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -17,25 +17,28 @@ jobs:
         with:
           node-version: 18
 
-      - name: Instalar dependencias
-        run: npm install axios
-
-      - name: Obtener datos y generar total.json
+      - name: Crear archivo total.json desde Renderz
         run: |
+          npm install axios
           node -e "
           const axios = require('axios');
           async function run() {
-            const res = await axios.get('https://renderz.app/api/players');
-            const jugadores = res.data.players;
-            const seleccionados = jugadores.filter(j => j.ovr >= 104 && j.ovr <= 109);
-            const total = seleccionados.reduce((s, j) => s + (j.value || 0), 0);
-            const fs = require('fs');
-            fs.writeFileSync('total.json', JSON.stringify({ total, timestamp: new Date().toISOString() }, null, 2));
+            try {
+              const res = await axios.get('https://renderz.app/api/players?grl=all');
+              const jugadores = res.data.players;
+              const seleccionados = jugadores.filter(j => j.ovr >= 104 && j.ovr <= 109);
+              const total = seleccionados.reduce((s, j) => s + (j.value || 0), 0);
+              const fs = require('fs');
+              fs.writeFileSync('total.json', JSON.stringify({ total, actualizado: new Date().toISOString() }, null, 2));
+            } catch (err) {
+              console.error('ERROR AL CONSULTAR RENDERZ:', err.response?.data || err.message);
+              process.exit(1);
+            }
           }
           run();
           "
 
-      - name: Subir total.json al repositorio
+      - name: Subir archivo total.json
         run: |
           git config --global user.name "github-actions"
           git config --global user.email "actions@github.com"
